<resources>
    <string name="app_name">Alert Client</string>
    <string name="action_settings">Settings</string>
    <string name="label_connection_ok">connected</string>
    <string name="label_connection_nok">no connection</string>
    <string name="label_alert_off">ALERT OFF</string>
    <string name="label_alert_on">ALERT ON</string>
    <string name="label_scan_start">Start scan</string>
    <string name="label_scan_running">Scanning</string>
    <string name="label_device_name_na">No device</string>
    <string name="label_device_address_na">unknown address</string>
</resources>
